--- a/rawphotoscleanup/MainWindow.xaml
+++ b/rawphotoscleanup/MainWindow.xaml
@@ -5,8 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:rawphotoscleanup"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Raw Photos Cleanup" Height="350" Width="525">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0" Grid.Column="0" Background="Yellow">
+            <ProgressBar x:Name="progressBar" Value="33"></ProgressBar>
+            <TextBlock Text="0/1 selected" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0 0 12 0"/>
+            <TextBlock Text="DSC00001.NEF" VerticalAlignment="Center" Margin="12 0 0 0"/>
+            <TextBlock Text="13/43" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        </Grid>
+        <Image Grid.Row="1"></Image>
     </Grid>
 </Window>
